// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Product component Stage: copy Renders correctly 1`] = `
"<Product onCopy={[Function: mockConstructor]} onGenerate={[Function: mockConstructor]} stage=\\"copy\\" data={{...}} type=\\"default\\" btnText=\\"Copiar Link\\" generateLoading={false} copyValue={{...}}>
  <section className=\\"wrapper default\\" onCopy={[Function: mockConstructor]} stage=\\"copy\\" data={{...}}>
    <div className=\\"tag\\">
      <Svg width={48} height={48} src=\\"logo/acom\\" align=\\"middle\\" />
      <Svg className=\\"tagHighlight\\" width={32} height={32} src=\\"flame\\" align=\\"middle\\" />
    </div>
    <div className=\\"imgWrapper\\">
      <a target=\\"_blank\\" href=\\"https://www.americanas.com.br/produto/33446653/notebook-profissional-avell-w155-mx-intel-core-i7-16gb-geforce-mx150-1tb-15-6-fullhd\\">
        <img className=\\"imgCustom\\" src=\\"https://images-americanas.b2w.io/produtos/01/00/sku/33446/6/33446652_4GG.jpg\\" alt=\\"Notebook Profissional Avell W155 MX Intel Core i7 16GB (GeForce MX150) 1TB 15.6 FullHD\\" />
      </a>
    </div>
    <h1 className=\\"name\\">
      <a href=\\"https://www.americanas.com.br/produto/33446653/notebook-profissional-avell-w155-mx-intel-core-i7-16gb-geforce-mx150-1tb-15-6-fullhd\\">
        Notebook Profissional Avell W155 MX Intel Core i7 16GB (GeForce MX150) 1TB 15.6 FullHD
      </a>
    </h1>
    <div className=\\"info\\">
      <a target=\\"_blank\\" href=\\"https://www.americanas.com.br/produto/33446653/notebook-profissional-avell-w155-mx-intel-core-i7-16gb-geforce-mx150-1tb-15-6-fullhd\\">
        R$ 5.333,20
      </a>
    </div>
    <div className=\\"footer\\">
      <div className=\\"expires\\">
        <a target=\\"_blank\\" href=\\"https://www.americanas.com.br/produto/33446653/notebook-profissional-avell-w155-mx-intel-core-i7-16gb-geforce-mx150-1tb-15-6-fullhd\\">
          Valido até: 01/03/2020 23:59
        </a>
      </div>
      <div className=\\"social\\">
        <Button className=\\"copy\\" onClick={[Function: bound handleCopy]} iconRight=\\"insert_link\\" disabled={false} color=\\"primary\\" size=\\"medium\\" type=\\"button\\" active={false}>
          <button type=\\"button\\" className=\\"copy primary medium\\" onClick={[Function: bound handleCopy]} disabled={false}>
            Copiar Link
            <Icon className=\\"iconRight\\" size={15} name=\\"insert_link\\" align=\\"middle\\">
              <i style={{...}} className=\\"material-icons icon iconRight\\" align=\\"middle\\">
                insert_link
              </i>
            </Icon>
          </button>
        </Button>
        <Svg onClick={[Function]} className=\\"facebook\\" align=\\"top\\" width={26} height={26} src=\\"icon/facebook-square\\" />
        <Svg onClick={[Function]} className=\\"twitter\\" align=\\"top\\" width={26} height={26} src=\\"icon/twitter-square\\" />
      </div>
    </div>
  </section>
</Product>"
`;

exports[`Product component Stage: generate Renders correctly 1`] = `
"<Product onCopy={[Function: mockConstructor]} onGenerate={[Function: mockConstructor]} stage=\\"generate\\" data={{...}} type=\\"default\\" btnText=\\"Copiar Link\\" generateLoading={false} copyValue={{...}}>
  <section className=\\"wrapper default\\" onCopy={[Function: mockConstructor]} stage=\\"generate\\" data={{...}}>
    <div className=\\"tag\\">
      <Svg width={48} height={48} src=\\"logo/acom\\" align=\\"middle\\" />
      <Svg className=\\"tagHighlight\\" width={32} height={32} src=\\"flame\\" align=\\"middle\\" />
    </div>
    <div className=\\"imgWrapper\\">
      <a target=\\"_blank\\" href=\\"https://www.americanas.com.br/produto/33446653/notebook-profissional-avell-w155-mx-intel-core-i7-16gb-geforce-mx150-1tb-15-6-fullhd\\">
        <img className=\\"imgCustom\\" src=\\"https://images-americanas.b2w.io/produtos/01/00/sku/33446/6/33446652_4GG.jpg\\" alt=\\"Notebook Profissional Avell W155 MX Intel Core i7 16GB (GeForce MX150) 1TB 15.6 FullHD\\" />
      </a>
    </div>
    <h1 className=\\"name\\">
      <a href=\\"https://www.americanas.com.br/produto/33446653/notebook-profissional-avell-w155-mx-intel-core-i7-16gb-geforce-mx150-1tb-15-6-fullhd\\">
        Notebook Profissional Avell W155 MX Intel Core i7 16GB (GeForce MX150) 1TB 15.6 FullHD
      </a>
    </h1>
    <div className=\\"info\\">
      <a target=\\"_blank\\" href=\\"https://www.americanas.com.br/produto/33446653/notebook-profissional-avell-w155-mx-intel-core-i7-16gb-geforce-mx150-1tb-15-6-fullhd\\">
        R$ 5.333,20
      </a>
    </div>
    <div className=\\"footer\\">
      <div className=\\"expires\\">
        <a target=\\"_blank\\" href=\\"https://www.americanas.com.br/produto/33446653/notebook-profissional-avell-w155-mx-intel-core-i7-16gb-geforce-mx150-1tb-15-6-fullhd\\">
          Valido até: 01/03/2020 23:59
        </a>
      </div>
      <div className=\\"social\\">
        <Button className=\\"copy\\" onClick={[Function: mockConstructor]} loading={false} iconRight=\\"insert_link\\" color=\\"primary\\" modifier=\\"outline\\" disabled={false} size=\\"medium\\" type=\\"button\\" active={false}>
          <button type=\\"button\\" className=\\"copy primary outline medium\\" onClick={[Function: mockConstructor]} disabled={false}>
            Gerar Link
            <Icon className=\\"iconRight\\" size={15} name=\\"insert_link\\" align=\\"middle\\">
              <i style={{...}} className=\\"material-icons icon iconRight\\" align=\\"middle\\">
                insert_link
              </i>
            </Icon>
          </button>
        </Button>
        <Svg onClick={[Function]} className=\\"facebook\\" align=\\"top\\" width={26} height={26} src=\\"icon/facebook-square\\" />
        <Svg onClick={[Function]} className=\\"twitter\\" align=\\"top\\" width={26} height={26} src=\\"icon/twitter-square\\" />
      </div>
    </div>
  </section>
</Product>"
`;

exports[`Product component Variations Type card renders Panel 1`] = `
"<Panel title={{...}} contentClassName=\\"wrapper card\\" size=\\"no-padding\\" data={{...}} stage=\\"generate\\" onCopy={[Function: onCopy]} loading={false} accordion={false} open={true} highlight=\\"shadow\\">
  <Symbol(react.fragment)>
    <div className=\\"tag\\">
      <Svg width={48} height={48} src=\\"logo/acom\\" align=\\"middle\\" />
      <Svg className=\\"tagHighlight\\" width={32} height={32} src=\\"flame\\" align=\\"middle\\" />
    </div>
    <div className=\\"imgWrapper\\">
      <a target=\\"_blank\\" href=\\"https://www.americanas.com.br/produto/33446653/notebook-profissional-avell-w155-mx-intel-core-i7-16gb-geforce-mx150-1tb-15-6-fullhd\\">
        <img className=\\"imgCustom\\" src=\\"https://images-americanas.b2w.io/produtos/01/00/sku/33446/6/33446652_4GG.jpg\\" alt=\\"Notebook Profissional Avell W155 MX Intel Core i7 16GB (GeForce MX150) 1TB 15.6 FullHD\\" />
      </a>
    </div>
    <h1 className=\\"name\\">
      <a href=\\"https://www.americanas.com.br/produto/33446653/notebook-profissional-avell-w155-mx-intel-core-i7-16gb-geforce-mx150-1tb-15-6-fullhd\\">
        Notebook Profissional Avell W155 MX Intel Core i7 16GB (GeForce MX150) 1TB 15.6 FullHD
      </a>
    </h1>
    <div className=\\"info\\">
      <a target=\\"_blank\\" href=\\"https://www.americanas.com.br/produto/33446653/notebook-profissional-avell-w155-mx-intel-core-i7-16gb-geforce-mx150-1tb-15-6-fullhd\\">
        R$ 5.333,20
      </a>
    </div>
    <div className=\\"footer\\">
      <div className=\\"expires\\">
        <a target=\\"_blank\\" href=\\"https://www.americanas.com.br/produto/33446653/notebook-profissional-avell-w155-mx-intel-core-i7-16gb-geforce-mx150-1tb-15-6-fullhd\\">
          Valido até: 01/03/2020 23:59
        </a>
      </div>
      <div className=\\"social\\">
        <Button className=\\"copy\\" onClick={[undefined]} loading={false} iconRight=\\"insert_link\\" color=\\"primary\\" modifier=\\"outline\\" disabled={false} size=\\"medium\\" type=\\"button\\" active={false}>
          Gerar Link
        </Button>
        <Svg onClick={[Function]} className=\\"facebook\\" align=\\"top\\" width={26} height={26} src=\\"icon/facebook-square\\" />
        <Svg onClick={[Function]} className=\\"twitter\\" align=\\"top\\" width={26} height={26} src=\\"icon/twitter-square\\" />
      </div>
    </div>
  </Symbol(react.fragment)>
</Panel>"
`;
